Adds changes